
java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}

test {
  useJUnitPlatform()

  jvmArgs(['--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'])
}

dependencies {
  implementation projects.purejsonLib
  testImplementation libs.compileTesting
  testImplementation libs.junitJupiter
  testImplementation libs.junitRunner
  testImplementation libs.purecheck
  testImplementation libs.purefunMonad
  testImplementation libs.purefunInstances
  testImplementation libs.gson
}